[package]
name = "lending"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
borsh = "0.9.3"

# Confidential SPL-Token crates
confidential-spl-token = "0.1.0"
solana-cpi = "2.2.1"
solana-instruction = "2.2"
solana-program = "2.2"
solana-program-error = "2.2.2"
solana-pubkey = "2.2"
solana-system-interface = "1.0.0"

[dev-dependencies]

# Confidential SPL-Token crates
confidential-spl-token-test = "0.1.0"
lending-encrypted-ixs = { path = "./lending-encrypted-ixs" }
solana-sdk = "2.2.2"
spl-token-client = "0.16.1"
