[package]
name = "payroll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
test-sbf = []

[dependencies]
arrayref = "0.3.9"
borsh = "0.9.3"
borsh-derive = "0.9.3"

# Confidential SPL-Token crates
confidential-spl-token = "0.1.0"
solana-cpi = "2.2.1"
solana-instruction = "2.2"
solana-program = "2.2"
solana-program-error = "2.2.2"
solana-pubkey = "2.4.0"
solana-system-interface = "1.0.0"
solana-sysvar-id = "2.2.1"
spl-token = { version = "8.0.0", features = [ "no-entrypoint" ] }

[dev-dependencies]

# Confidential SPL-Token crates
confidential-spl-token-test = "0.1.0"
solana-sdk = "2.2.2"
spl-token-client = "0.16.1"
